aplicação rodando| códigos comentados
