# src/main/java/app/pontos/models/Funcionario.java
@@ -4,7 +4,6 @@ import app.pontos.enums.status_funcionario;
 import app.pontos.enums.tipo_funcionario;
 import lombok.Data;
 import lombok.EqualsAndHashCode;
-
 import javax.persistence.*;
 import java.time.LocalDate;
 
@@ -12,6 +11,7 @@ import java.time.LocalDate;
 @Entity(name = "Funcionario")
 @Table(name = "funcionarios")
 @EqualsAndHashCode(of = "id")
+//MAPEAMENTO DE ENTIDADE ATRAVÉS DA JPA
 public class Funcionario {
 
     @Id @GeneratedValue(strategy = GenerationType.IDENTITY)
@@ -28,19 +28,24 @@ public class Funcionario {
     String cargo;
     LocalDate data_admissao;
     LocalDate data_demissao;
+    @Column(name = "id_usuario")
+    Integer id_usuario;
 
     @ManyToOne
-    @JoinColumn(name = "id_usuario")
-    Usuario id_usuario;
+    @JoinColumn(name = "id_usuario",insertable = false, updatable = false)
+    Usuario usuario;
+
+    @Column(name = "id_empresa")
+    Integer id_empresa;
     @OneToOne
-    @JoinColumn(name = "id_empresa", referencedColumnName = "id_empresa")
-    Empresa id_empresa;
+    @JoinColumn(name = "id_empresa", referencedColumnName = "id_empresa", insertable = false, updatable = false)
+    Empresa empresa;
 
     public void setId_usuario(Integer idUsuario) {
-        id_usuario = getId_usuario();
+        id_usuario = idUsuario;
     }
 
     public void setId_empresa(Integer idEmpresa) {
-        id_empresa = getId_empresa();
+        id_empresa = idEmpresa;
     }
 }
